<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adb_auth_instructions">When the gray window appears, first check \"Always allow\" and then click \"Allow\"</string>
    <string name="app_name">Electro - Car</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_start_attention">ATTENTION: it\'s required to check this config after every new update</string>
    <string name="auto_start_config_error">Failed to open the settings screen. Please open the settings manually and allow automatic startup for Electro.</string>
    <string name="auto_start_description">If Electro is not auto starting after system reboot, set it up by clicking the button below:</string>
    <string name="auto_start_instructions">Open the settings and uncheck the Electro option, as shown in the image, to allow the app to start automatically.</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="countdown_message">Waiting %d seconds to ensure you have read...</string>
    <string name="country_code_description" />
    <string name="dev_tools_description" />
    <string name="devtools_description_1">You need to install the BYD Development Tools.</string>
    <string name="devtools_description_2">Download the APK at electro.app.br/devtools or click the button below to be redirected.</string>
    <string name="devtools_title">BYD Development Tools not found</string>
    <string name="disable_traffic_monitor">Disable Traffic Monitor</string>
    <string name="download">Download</string>
    <string name="enable_auto_start">Enable Auto Start</string>
    <string name="enable_traffic_monitor">Enable Traffic Monitor</string>
    <string name="enable_usb_debug">Enable USB Debug</string>
    <string name="enable_usb_debug_check">I have already opened the instructions from the link above and am ready to continue</string>
    <string name="enable_usb_debug_instructions">BEFORE CLICKING THE BUTTON BELLOW, OPEN THE INSTRUCTIONS AT: electro.app.br/usb</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="initializing">Initializing...</string>
    <string name="install">Install</string>
    <string name="install_lab_version">Install Lab Version</string>
    <string name="install_lab_version_loading">Checking...</string>
    <string name="ive_set_it_up">I\'ve set it up</string>
    <string name="lab_version_available_message">Lab version available: %s</string>
    <string name="lab_version_check_failed">Could not check Lab version. Please try again.</string>
    <string name="lab_version_install_failed">Lab version installation failed. Please try again.</string>
    <string name="lab_version_installing_message">%s - Downloading and installing...</string>
    <string name="lab_version_not_available_message">No new Lab version available</string>
    <string name="license_expired_button">Refresh</string>
    <string name="license_expired_title">License expired</string>
    <string name="license_renewal_instructions">Subscription renewal can be done in the Electro app on your smartphone. If you don\'t have the app installed, visit electro.app.br to install it.</string>
    <string name="list_of_connected_users">Connected users</string>
    <string name="loading_seat_memory_warning">Please wait... Setting driver seat to Position</string>
    <string name="manual_update_instructions">If the update fails, download the APK at electro.app.br/‍car and install with an USB stick</string>
    <string name="network_error">Network error (check your connection)</string>
    <string name="new_version_available_toast">Electro: New version available! Open the app to update</string>
    <string name="no_connected_users">No connected users</string>
    <string name="open_country_code_tool">Open Country Code Tool</string>
    <string name="open_dev_tools">Open Dev Tools</string>
    <string name="open_settings">Open Settings</string>
    <string name="open_usb_settings">Open USB Settings</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="qr_code_instructions">Access electro.app.br and install the app in your smartphone</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">Settings</string>
    <string name="setup_auto_start">Set up auto start</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="to_remove">Remove</string>
    <string name="traffic_monitor_description">If you\'re unable to use the car\'s internet with third-party apps, disable the traffic monitor and then restart the system by holding the volume button for 10 seconds</string>
    <string name="traffic_monitor_disable_failed">Failed to disable Traffic Monitor. Wait a few seconds and try again</string>
    <string name="traffic_monitor_disabled">Traffic Monitor Disabled. Now reboot the system by holding the volume button</string>
    <string name="traffic_monitor_enable_failed">Failed to enable Traffic Monitor. Wait a few seconds and try again</string>
    <string name="traffic_monitor_enabled">Traffic Monitor Enabled</string>
    <string name="understood">Understood</string>
    <string name="update_available_title">New Update Available</string>
    <string name="update_button">Update</string>
    <string name="update_changelog">• Bug fixes and performance improvements\n• Enhanced vehicle connectivity\n• New seat memory management features\n• Improved camera streaming quality\n• Security updates and optimizations</string>
    <string name="update_required_message">This version of Electro is no longer supported.\nTo keep using the app, download the latest version at electro.app.br/car and install it without uninstalling this one.</string>
    <string name="update_required_title">This version has been discontinued</string>
    <string name="update_required_warning">Important: If you uninstall this version, all saved data will be lost.</string>
    <string name="update_version">1.2.2</string>
</resources>
