<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#242424"
    android:padding="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_electro_logo"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="#444444"
            android:padding="36dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1">
            <TextView
                android:textSize="28sp"
                android:textColor="#aaaaaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/update_available_title"
                android:textAllCaps="false"
                android:textAlignment="center"/>
            <TextView
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:id="@+id/version_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/update_version"
                android:textAllCaps="false"
                android:textAlignment="center"/>
            <Button
                android:enabled="true"
                android:layout_gravity="center_horizontal"
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_button"
                style="@style/RoundButton"/>
            <TextView
                android:textSize="14sp"
                android:textColor="#cccccc"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/manual_update_instructions"
                android:textAllCaps="false"
                android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="#444444"
            android:padding="36dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:id="@+id/changelog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_changelog"
                android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
