<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#242424"
    android:padding="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_electro_logo"/>
    <LinearLayout
        android:orientation="vertical"
        android:background="#444444"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:padding="36dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="28sp"
                android:textColor="#aaaaaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/devtools_title"
                android:textAllCaps="false"
                android:textAlignment="center"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/devtools_description_1"
                    android:textAllCaps="false"
                    android:textAlignment="center"/>
                <TextView
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/devtools_description_2"
                    android:textAllCaps="false"
                    android:textAlignment="center"/>
                <Button
                    android:enabled="true"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/downloadDevTools"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    style="@style/RoundButton"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
