<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#242424"
    android:padding="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_electro_logo"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:background="#444444"
            android:padding="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:textSize="28sp"
                android:textColor="#aaaaaa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/enable_auto_start"
                android:textAllCaps="false"
                android:textAlignment="center"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp">
                    <TextView
                        android:textSize="20sp"
                        android:textColor="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/auto_start_instructions"
                        android:textAllCaps="false"
                        android:textAlignment="center"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/auto_init"/>
                <Button
                    android:enabled="true"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/open_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_settings"
                    style="@style/RoundButton"/>
                <Button
                    android:enabled="true"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/ive_set_it_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/ive_set_it_up"
                    style="@style/RoundButtonGrey"/>
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/yellow"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/auto_start_attention"
                    android:textAllCaps="false"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
