<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbarThumbVertical="@android:color/white"
    android:scrollbarStyle="outsideOverlay"
    android:background="#242424"
    android:fadingEdgeLength="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fadeScrollbars="false"
    android:requiresFadingEdge="vertical">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_electro_logo"/>
        <LinearLayout
            android:orientation="vertical"
            android:background="#444444"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:padding="36dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="28sp"
                    android:textColor="#aaaaaa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/update_required_title"
                    android:textAllCaps="false"
                    android:textAlignment="center"/>
                <TextView
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/update_required_message"
                    android:textAllCaps="false"
                    android:textAlignment="center"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="#ffcc00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_required_warning"
                    android:textAllCaps="false"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
