<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#242424"
    android:padding="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_electro_logo"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mainLinearLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="#333333"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="400dp">
            <TextView
                android:textColor="#aaaaaa"
                android:id="@+id/qrCodeInstructionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/qr_code_instructions"
                android:textAlignment="center"/>
            <ProgressBar
                android:layout_gravity="center"
                android:id="@+id/qrCodeLoadingProgressBar"
                android:visibility="gone"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_margin="40dp"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/qrCodeImageView"
                android:visibility="gone"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:textColor="#aaaaaa"
                android:id="@+id/qrCodeText"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"/>
            <Button
                android:id="@+id/generateQRCodeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generate_qr_code"
                style="@style/RoundButton"/>
            <Button
                android:id="@+id/settingsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/settings"
                style="@style/RoundButtonGrey"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:background="#444444"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="28sp"
                    android:textColor="#aaaaaa"
                    android:id="@+id/user_list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/list_of_connected_users"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:layout_marginStart="36dp"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:id="@+id/empty_user_list"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/no_connected_users"
                    android:layout_centerInParent="true"
                    android:textAllCaps="true"
                    android:textAlignment="center"/>
                <ProgressBar
                    android:layout_gravity="center"
                    android:id="@+id/userListLoadingProgressBar"
                    android:visibility="gone"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_margin="40dp"
                    android:layout_centerInParent="true"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/userList"
                    android:padding="8dp"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/user_list_title"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/initializingLinearLayout"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="#444444"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:textSize="28sp"
                android:textColor="#aaaaaa"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/initializing"
                android:textAllCaps="false"
                android:textAlignment="center"/>
            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="60dp"/>
            <TextView
                android:textSize="18sp"
                android:textColor="#aaaaaa"
                android:layout_gravity="center"
                android:id="@+id/supportId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textAllCaps="false"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
